| Summary: | ASTERISK-19397: Fix cause code for no channel available | ||
| Reporter: | Birger "WIMPy" Harzenetter (wimpy) | Labels: | |
| Date Opened: | 2012-02-20 10:17:16.000-0600 | Date Closed: | 2012-02-28 14:59:19.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 1.8.7.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | DAHDI channel in TE-mode | Attachments: | ( 0) nochannel-cause.patch |
| Description: | If a waiting call arrives from the network, chan dahdi responds with 'incompatible destination', probably resulting in rather confusing announcements to the caller. The appended patch changes it to 'no circuit/channel available'. | ||
| Comments: | |||