Use more reasonable cause code when rejecting incoming call waiting calls.

(closes issue ASTERISK-19397)
Reported by: Birger Harzenetter
Patches:
      nochannel-cause.patch (license #5870) patch uploaded by Birger Harzenetter


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/1.8@357407 65c4cc65-6c06-0410-ace0-fbb531ad65f3